# spaCy_tun

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
data/: variants_50.jsonl
data/processed/: tunisian_derja_contrastive_pairs.jsonl  tunisian_derja_encoder_data.jsonl  tunisian_derja_high_quality.jsonl  tunisian_derja_instructions.jsonl  tunisian_derja_scored.jsonl  tunisian_derja_spo_pairs.jsonl
data/processed_full/: tunisian_derja_contrastive_pairs.jsonl  tunisian_derja_high_quality.jsonl
docs/: api.md  getting-started.md  index.md
docs/guides/: features.md  normalization.md  pipeline.md  scoring.md
scripts/: demo_tun_linguist.py  generate_variants.py  process_derja_dataset.py  score_mt_outputs.py  train_quality_encoder.py
spaCy_tun/: __init__.py  filter.py  lexicon.py  syntax.py
tun_linguist/: __init__.py  filter.py  morphology.py  normalizer.py  syntax.py
